# erissery

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/erissery-cli/: Cargo.toml
crates/erissery-cli/src/: main.rs
crates/erissery-core/: Cargo.toml
crates/erissery-core/src/: ggml.rs  hf_config.rs  lib.rs  model_dir.rs  quantization.rs  tokenizer.rs
crates/erissery-core/src/gguf/: kv.rs  mod.rs  tensor_names.rs  types.rs  writer.rs
crates/erissery-core/src/quant/: constants.rs  mod.rs  q4_k_m.rs  q8_0.rs  utils.rs
