[workspace]
members = ["crates/erissery-cli", "crates/erissery-core"]
resolver = "3"

[workspace.dependencies]
safetensors = "0.8.0"
memmap2 = "0.9.10"
byteorder = "1.5.0"
half = { version = "2.7.1", features = ["bytemuck"] }
rayon = "1.12.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
