[package]
name = "erissery-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
byteorder.workspace = true
half.workspace = true
memmap2.workspace = true
rayon.workspace = true
safetensors.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true