[package]
name = "erissery-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck.workspace = true
byteorder.workspace = true
half.workspace = true
memmap2.workspace = true
rayon.workspace = true
safetensors.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = "0.10.1"
tokenizers = { version = "0.23.1", features = ["http"] }
sha2 = "0.11.0"
hex = "0.4.3"